--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
 html,
 body,
 #root,
-#root > div,
-#root > div > div {
+#root > div {
   height: 100%;
 }
 /* 우선 루트인 이유는 그냥 이렉트에서 자동으로 만들어 주는 것 이고
 우선 다(부모)다 100프로로 만드는 것
  */
+
+ #header {
+  height: 64px;
+  border-bottom: 1px solid gray;
+  /* 
+  중앙으로 맞추는건데 아래 헤더 아레아 부분 대신 했기 때문에 지워도 됨
+  display: flex;
+  justify-content: center; 
+  */
+}
+
+#body {
+  /* 바디는 다 차지해야 하므로 부모 높이 다 채움 */
+  /* vh는 부모으 크기 따라가지 않고 윈도우 크기 따라감 */
+  height: 100vh;
+  /* 바디 부분은 가운데 정렬 자식이 부모 기준으로 정렬 */
+  width: 1024px;
+  margin: 0 auto;
+}
+
+#footer {
+  height: 200px;
+  background-color: gray;
+}
