상품 업로드 중간

--- a/src/upload/index.css
+++ b/src/upload/index.css
@@ -46,3 +46,11 @@
     border: none;
     margin-top: 10px;
 }
+
+#upload_img{
+    width: 200px;
+    height: 200px;
+    margin-left: 16px;
+    /* 이미지 비율 맞추기 */
+    object-fit: contain;
+}
