--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,12 +1,7 @@
 
 #banner {
   height: 300px;
-  background-color: yellow;
 }
-
-
-
-
 
 #body > h1 {
   margin-top: 16px;
@@ -33,6 +28,7 @@
 .product_img {
   width: 100%;
   height: 210px;
+  object-fit: contain;
 }
 
 .product_contents {
@@ -79,4 +75,8 @@
 .product_date{
   font-size: 7px;
   color: rgb(136, 136, 136);
+}
+
+.product_headline{
+  margin-top:8px;
 }
