--- a/src/main/index.css
+++ b/src/main/index.css
@@ -23,6 +23,20 @@
   border: 1px solid rgb(230, 230, 230);
   /* 맨 앞으로 땡기기 (앞 그림에 가려서 안보일 때) */
   overflow: hidden;
+  /* 판매된 상품 블러처리 관련 */
+  position: relative;
+}
+
+.product_blur{
+  /* 원래 html쓰면 차곡차곡 한줄 씩 먹는데 이거 쓰면 부모만 바라봄 */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ffffffaa;
+  /* 클릭 가능하게 */
+  pointer-events: none;
 }
 
 .product_img {
