--- a/src/product/index.css
+++ b/src/product/index.css
@@ -45,9 +45,15 @@
 
 #description{
     margin-top: 16px;
+    font-size: 18px;
 }
 
 #createdAt{
     font-size: 12px;
     color: rgb(204,204,204)
+}
+
+#purchase_button{
+    margin-top:  8px;
+    margin-bottom: 16px;
 }
