--- a/src/App.css
+++ b/src/App.css
@@ -44,22 +44,34 @@ body,
   height: 36px;
 }
 
-/* 배너 이미지 크기 정해주는게 좋다함 */
-#banner > img {
-  width: 100%;
-  height: 300px;
-}
-
 #body {
   /* 바디는 다 차지해야 하므로 부모 높이 다 채움 */
   /* vh는 부모으 크기 따라가지 않고 윈도우 크기 따라감 */
-  height: 100vh;
-  /* 바디 부분은 가운데 정렬 자식이 부모 기준으로 정렬 */
-  width: 1024px;
+  min-height: 100vh;
+  /* 바디 부분은 가운데 정렬 자식이 부모 기준으로 정렬 반응형*/
+  max-width: 1024px;
+  width: 100%;
   margin: 0 auto;
 }
 
 #footer {
   height: 200px;
   background-color: gray;
+}
+
+
+/* 반응형 */
+@media screen and (max-width: 400px) {
+  .product-card {
+    width: 160px !important;
+  }
+  #header {
+    padding: 0 8px;
+  }
+  #body {
+    padding: 0 8px;
+  }
+  .ant-carousel {
+    margin: 0 -8px;
+  }
 }
