--- a/src/product/index.css
+++ b/src/product/index.css
@@ -6,7 +6,10 @@
 }
 
 #image_box > img{
-    height: 100%;
+    /* he에서 wi로 바꿈 반응형 위해 */
+    width: 100%;
+    max-height: 300px;
+    object-fit: contain;
 
 }
 
